# chronicle

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: publish.yml
examples/: sample_nudge_sdk_ollama.py  sdk.py  sdk_sample.py
examples/workflows/: claude.md  codex.md  cursor.md  pr-review.md
src/chronicle/: __init__.py  api.py  cli.py  mcp_stdio.py  models.py  ollama.py  pipeline.py  remote_repo.py
src/chronicle/core/: __init__.py  config.py  errors.py  interfaces.py  logging.py  models.py  pydantic_compat.py
src/chronicle/eval/: __init__.py  ab_tests.py  accuracy_eval.py  benchmarks.py  retrieval_quality.py  token_savings.py
src/chronicle/indexer/: __init__.py  ast_parser.py  call_graph_builder.py  dependency_graph_builder.py  git_evolution_analyzer.py  repo_scanner.py  symbol_extractor.py
src/chronicle/integrations/: __init__.py  langgraph.py  langgraph_node.py  mcp_server.py
src/chronicle/llm/: __init__.py  guardrails.py  prompts.py  providers.py  router.py  token_usage.py
src/chronicle/memory/: __init__.py  agent_bus_store.py  migrations.py  schema.py  session_store.py  sqlite_store.py  store.py  vector_store.py
src/chronicle/retrieval/: __init__.py  call_chain.py  context_builder.py  context_compressor.py  graph_ranker.py  patch_context.py  provenance.py  query_planner.py  retrieval_orchestrator.py  symbol_ranker.py  token_budget.py
src/chronicle/service/: __init__.py  app.py
src/chronicle/validation/: __init__.py  grounding_checker.py  hallucination_checker.py  output_validator.py  patch_validator.py
tests/: test_graph.py  test_reasoning.py  test_remote_repo.py  test_scanner.py
