[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-sdk"
version = "0.1.3"
description = "Python SDK for grounded context compression and LLM routing in coding workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "GitPython>=3.1.43",
  "mcp>=1.27,<2",
  "numpy>=1.26",
  "pydantic>=2.8",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8.0"]
hosted = ["fastapi>=0.115", "uvicorn>=0.30"]
treesitter = ["tree-sitter>=0.25.0", "tree-sitter-python>=0.23.0"]

[project.scripts]
chronicle = "chronicle.cli:main"
chronicle-api = "chronicle.service.app:main"
chronicle-mcp = "chronicle.mcp_stdio:main"

[project.urls]
Homepage = "https://github.com/animeshdutta888/chronicle"
Repository = "https://github.com/animeshdutta888/chronicle"
Issues = "https://github.com/animeshdutta888/chronicle/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = [
  "chronicle_logs",
  ".chronicle",
  "dist",
  "build",
  ".git",
]
